[#617]Small call and variable optimisation
Signed-off-by: Anton Pinsky <anton.pinsky@ionos.com>